--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 </div>
 
 <script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="http://d3js.org/d3.geo.projection.v0.min.js"></script>
+<script src="http://d3js.org/colorbrewer.v1.min.js"></script>
+<script src="http://d3js.org/topojson.v1.min.js"></script>
 <script src="plotter.js"></script>
 
 </body>
