--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/d3.geo.projection.v0.min.js"></script>
 <script src="http://d3js.org/colorbrewer.v1.min.js"></script>
+<script src="http://d3js.org/queue.v1.min.js"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
-<script src="plotter.js"></script>
+
+<!--<script src="plotter.js"></script>-->
+<script src="carto-plotter.js"></script>
 
 </body>
 </html>
