failed attempt at using the cartogram plugin

--- a/test-carto.html
+++ b/test-carto.html
@@ -27,7 +27,9 @@
 <script src="cartogram.js"></script>
 
 <!--<script src="plotter.js"></script>-->
-<script src="carto-plotter.js"></script>
+<!--<script src="carto-plotter.js"></script>-->
+
+<script src="test-carto-plotter.js"></script>
 
 </body>
 </html>
