--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <script src="http://d3js.org/topojson.v1.min.js"></script>
 <script src="cartogram.js"></script>
 
-<!--<script src="plotter.js"></script>-->
-<script src="carto-plotter.js"></script>
+<script src="plotter.js"></script>
+<!--<script src="carto-plotter.js"></script>-->
 
 </body>
 </html>
