--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 	.hide {
 		display: none;
 	}
+
+  .tip {
+    background: beige;
+    border-radius: 3px;
+    padding: 3px;
+  }
 </style>
 </head>
 
@@ -24,7 +30,8 @@
 <script src="http://d3js.org/colorbrewer.v1.min.js"></script>
 <script src="http://d3js.org/queue.v1.min.js"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
-<script src="cartogram.js"></script>
+<script src="./d3-tip.js"></script>
+<!--<script src="cartogram.js"></script>-->
 
 <script src="plotter.js"></script>
 <!--<script src="carto-plotter.js"></script>-->
