Update artist details on click

--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
       </div>
 
       <div class="box artist-box">
-        <h2>Select an Artist</h2>
+        <h3 class="artist-name">Select an Artist</h3>
         <section class="artist-details">
-          <h3 class="aritst-name"></h3>
           <p class="artist-loc"></p>
           <p class="artist-years"></p>
-          <p class="artist-genre"><i>Genres: </i></p>
-          <p class="artist-hot"><i>Familiarity: </i></p>
-          <p class="artist-fam"><i>Hotttnesss: </i></p>
+          <p class="artist-genre"><i></i></p>
+          <p class="artist-hot"><i></i></p>
+          <p class="artist-fam"><i></i></p>
         </section>
       </div>
 
