Country info box

--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
         <section class="artist-details">
           <p class="artist-loc"></p>
           <p class="artist-years"></p>
-          <p class="artist-genre"><i></i></p>
-          <p class="artist-hot"><i></i></p>
-          <p class="artist-fam"><i></i></p>
+          <p class="artist-genre"></p>
+          <p class="artist-hot"></p>
+          <p class="artist-fam"></p>
         </section>
       </div>
 
       <div class="box country-box">
-        <h2>Select a Country</h2>
+        <h2 class="country-name">Select a Country</h2>
         <section class="country-details">
+          <p class="country-total"></p>
+          <p class="country-percent"></p>
         </section>
       </div>
     </div>
